# llm-transformer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: CODEOWNERS  unittests.yaml
llm_transformer/: dataset.json  melody_generator.py  melody_preprocessor.py  train.py  transformer.py
llm_transformer/datacamp/: decoder_layer.py  download_data.py  encoder_layer.py  multi_head_attention.py  positional_encoding.py  train_and_validate.py  transformer.py
llm_transformer/generative_music_ai/: train.py
llm_transformer/ml_mastery/: data_download.py  data_import_pipeline.py  data_stats.py  download_text_data.py  normalise_data.py
