[tool.poetry]
name = "llm-transformer"
version = "0.1.0"
description = ""
authors = ["Alex Wernick <alex.j.wernick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
matplotlib = "^3.10.1"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
spacy = "^3.8.5"
datasets = "^3.5.0"
transformers = "^4.51.3"
sentencepiece = "^0.2.0"
sacremoses = "^0.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^3.8.0"
ipykernel = "^6.29.5"
line-profiler = "^4.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
